--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "json-server": "^0.17.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
-    "vuex": "^4.0.0"
+    "vuex": "^4.0.0",
+    "typescript": "~4.5.5"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
@@ -29,8 +30,8 @@
     "@vue/eslint-config-typescript": "^9.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "sass": "^1.32.7",
-    "sass-loader": "^12.0.0",
+    "sass": "^1.69.7",
+    "sass-loader": "^12.6.0",
     "typescript": "~4.5.5"
   }
 }
